--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>uf2.mp3.dam</groupId>
-    <artifactId>test2fx</artifactId>
+    <artifactId>Cines-JavaFX</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>test2fx</name>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mainClass>Main</mainClass>
-    </properties>
+    <name>Cines-JavaFX</name>
 
     <organization>
         <!-- Used as the 'Vendor' for JNLP generation -->
@@ -51,7 +46,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.8.0</version>
                 <configuration>
                     <release>3.8.1</release>
                 </configuration>
@@ -62,6 +57,21 @@
                 <version>0.0.3</version>
                 <configuration>
                     <mainClass>MainApp</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>uf2.mp3.Main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
                 </configuration>
             </plugin>
         </plugins>
